out
hello
  File "<ipython-input-19-118274b1e4e2>", line 1
    f = open(<_io.TextIOWrapper name='<stdout>' mode='w' encoding='UTF-8'>, 'w')
             ^
SyntaxError: invalid syntax

hello
hello
Out[25]: 
{'Balaka': 0.15460238095238094,
 'Blantyre': 0.26903953488372095,
 'Blantyre City': 0.1166,
 'Chikwawa': 0.20124999999999998,
 'Chiradzulu': 0.34425,
 'Chitipa': 0.222625,
 'Dedza': 0.1745,
 'Dowa': 0.0,
 'Karonga': 0.16075,
 'Kasungu': 0.19842857142857145,
 'Likoma': 0.28500000000000003,
 'Lilongwe': 0.24179180327868857,
 'Lilongwe City': 0.1463,
 'Machinga': 0.1795,
 'Mangochi': 0.16083333333333333,
 'Mchinji': 0.19,
 'Mulanje': 0.36,
 'Mwanza': 0.20811428571428572,
 'Mzimba': 0.1153225806451613,
 'Mzuzu City': 0.0501,
 'Neno': 0.0974,
 'Nkhata Bay': 0.030625,
 'Nkhotakota': 0.2979705882352941,
 'Nsanje': 0.3133333333333333,
 'Ntcheu': 0.1710357142857143,
 'Ntchisi': 0.18249999999999997,
 'Phalombe': 0.47,
 'Rumphi': 0.0,
 'Salima': 0.06529411764705884,
 'Thyolo': 0.17162500000000003,
 'Zomba': 0.09933333333333336,
 'Zomba City': 0.09933333333333336}
